# Raspberry_mysql

./: CMakeLists.txt  README.md
docs/: create_table.sql  insert.sql
lib/: db.c  db.h
properties/: properties.json
src/: main.c
